Update edgeR & Read_Counting exercises

--- a/exercises/DE_edgeR.Rmd
+++ b/exercises/DE_edgeR.Rmd
@@ -22,30 +22,14 @@ if (!require("pacman")) install.packages("pacman"); library(pacman)
 # let's load all of the files we were using and want to have again today
 p_load("tidyverse", "knitr", "readr",
        "pander", "BiocManager", 
-       "dplyr", "stringr")
+       "dplyr", "stringr", 
+       "purrr", # for working with lists (beautify column names)
+       "reactable") # for pretty tables.
 
-# We also need the Bioconductor packages "Rsubread" for today's activity.
-p_load("edgeR", "org.Sc.sgd.db")
-
-list.of.packages <- c("tidyverse", "here", "knitr", "pander", "BiocManager", "reactable")
-
-new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
-if(length(new.packages)) install.packages(new.packages,repos = "http://cran.us.r-project.org")
-lapply(list.of.packages, require, character.only = TRUE)
-
+# We also need these Bioconductor packages today.
+p_load("edgeR", "AnnotationDbi", "org.Sc.sgd.db")
 ```
 
-We also need the bioconductor package "edgeR" for today's activity.
-
-```{r install-FastqPackages, results="hide", message=FALSE, warning=FALSE}
-# make sure we have the CRAN package installed for getting bioconductor packages
-if (!requireNamespace("edgeR", quietly = TRUE))
-    BiocManager::install("edgeR")
-
-# this loads the saccharomyces cerevesiae database from sgd
-if (!requireNamespace("org.Sc.sgd.db", quietly = TRUE))
-    BiocManager::install("org.Sc.sgd.db")
-```
 
 # Description
 
@@ -55,7 +39,7 @@ This will be our first differential expression analysis workflow, converting gen
 
 At the end of this exercise, you should be able to:
 
--   Generate a table of sample metadata .
+-   Generate a table of sample metadata.
 -   Filter low counts and normalize count data.
 -   Utilize the edgeR package to identify differentially expressed genes.
 
@@ -69,9 +53,10 @@ options(digits=3)
 
 # Loading in the featureCounts object 
 
-We saved this file at the end of last exercise (Read_Counting.Rmd). Now we can load that object back in and assing it to the variable fc. Be sure to change the file path if you have saved it in a different location.
+We saved this file in the last exercise (Read_Counting.Rmd) from the RSubread package. Now we can load that object back in and assign it to the variable `fc`. Be sure to change the file path if you have saved it in a different location.
 ```{r load-fc, error=TRUE}
-fc <- readRDS(file = "~/Desktop/yeast_fc_output.Rds")
+path_fc_object <- path.expand("~/Desktop/Genomic_Data_Analysis/Data/yeast_fc_output.Rds")
+fc <- readRDS(file = path_fc_object)
 ```
 
 
@@ -79,35 +64,60 @@ If you don't have that file for any reason, the below code chunk will load a cop
 ```{r altLoad-fc}
 if( !exists("fc") )
 {
-  fc <- read_rds('https://github.com/clstacy/GenomicDataAnalysis_Fa23/raw/main/data/heat_shock/yeast_fc_output.Rds')
+  fc <- read_rds('https://github.com/clstacy/GenomicDataAnalysis_Fa23/raw/main/data/ethanol_stress/yeast_fc_output.Rds')
 }
 ```
 
-So far, we've been able to process all of the fastq files without much information about what each sample is in the experimental design. Now, we need the metadata for the samples
+So far, we've been able to process all of the fastq files without much information about what each sample is in the experimental design. Now, we need the metadata for the samples. Note that the order matters for these files
+
+To find the order of files we need, we can get just the part of the column name before the first "." symbol with this command:
+```{r identify-sampleOrder}
+str_split_fixed(fc$counts %>% colnames(), "\\.", n = 2)[, 1]
+```
+
 
 ```{r generate-metadata}
 sample_metadata <- tribble(
-  ~FileName,                                                    ~GEOAccession, ~Condition,
-  "filtered_subset_phenol_heat_rep1_rfastp_R1.fastq.gz",         "GSM4008800", "heat",
-  "filtered_subset_phenol_heat_rep2_rfastp_R1.fastq.gz",         "GSM4008801", "heat",
-  "filtered_subset_phenol_heat_rep3_rfastp_R1.fastq.gz",         "GSM4008802", "heat",
-  "filtered_subset_phenol_heat_rep4_rfastp_R1.fastq.gz",         "GSM4008803", "heat",
-  "filtered_subset_phenol_unstressed_rep1_rfastp_R1.fastq.gz",   "GSM4008796", "unstressed",
-  "filtered_subset_phenol_unstressed_rep2_rfastp_R1.fastq.gz",   "GSM4008797", "unstressed",
-  "filtered_subset_phenol_unstressed_rep3_rfastp_R1.fastq.gz",   "GSM4008798", "unstressed",
-  "filtered_subset_phenol_unstressed_rep4_rfastp_R1.fastq.gz",   "GSM4008799", "unstressed") %>%
-  # make Condition a factor (with baseline as first level) for edgeR
-  mutate(Condition = factor(Condition, 
-                            levels = c("unstressed", "heat")
-                            ))
-         
+  ~Sample,                      ~Genotype,    ~Condition,
+  "YPS606_MSN24_ETOH_REP1_R1",   "msn24dd",   "EtOH",
+  "YPS606_MSN24_ETOH_REP2_R1",   "msn24dd",   "EtOH",
+  "YPS606_MSN24_ETOH_REP3_R1",   "msn24dd",   "EtOH",
+  "YPS606_MSN24_ETOH_REP4_R1",   "msn24dd",   "EtOH",
+  "YPS606_MSN24_MOCK_REP1_R1",   "msn24dd",   "unstressed",
+  "YPS606_MSN24_MOCK_REP2_R1",   "msn24dd",   "unstressed",
+  "YPS606_MSN24_MOCK_REP3_R1",   "msn24dd",   "unstressed",
+  "YPS606_MSN24_MOCK_REP4_R1",   "msn24dd",   "unstressed",
+  "YPS606_WT_ETOH_REP1_R1",      "WT",        "EtOH",
+  "YPS606_WT_ETOH_REP2_R1",      "WT",        "EtOH",
+  "YPS606_WT_ETOH_REP3_R1",      "WT",        "EtOH",
+  "YPS606_WT_ETOH_REP4_R1",      "WT",        "EtOH",
+  "YPS606_WT_MOCK_REP1_R1",      "WT",        "unstressed",
+  "YPS606_WT_MOCK_REP2_R1",      "WT",        "unstressed",
+  "YPS606_WT_MOCK_REP3_R1",      "WT",        "unstressed",
+  "YPS606_WT_MOCK_REP4_R1",      "WT",        "unstressed") %>%
+  # Create a new column that combines the Genotype and Condition value
+  mutate(Group = factor(
+    paste(Genotype, Condition, sep = "."),
+    levels = c(
+      "WT.unstressed","WT.EtOH",
+      "msn24dd.unstressed", "msn24dd.EtOH"
+    )
+  )) %>%
+  # make Condition and Genotype a factor (with baseline as first level) for edgeR
+  mutate(
+    Genotype = factor(Genotype,
+                      levels = c("WT", "msn24dd")),
+    Condition = factor(Condition,
+                       levels = c("unstressed", "EtOH"))
+  )
+  
 
 ```
 
 Now, let's create a design matrix with this information
 
 ```{r}
-group <- sample_metadata$Condition
+group <- sample_metadata$Group
 design <- model.matrix(~ 0 + group)
 design
 colnames(design) <- levels(group)
@@ -121,8 +131,8 @@ The count matrix is used to construct a DGEList class object. This is the main d
 
 ```{r load-counts}
 y <- DGEList(fc$counts, group=group)
-colnames(y) <- sample_metadata$GEOAccession
-y
+colnames(y) <- sample_metadata$Sample
+y$samples
 ```
 
 Human-readable gene symbols can also be added to complement the gene ID for each gene, using the annotation in the org.Sc.sgd.db package.
@@ -137,17 +147,17 @@ head(y$genes)
 # Filtering to remove low counts
 
 
-Genes with very low counts across all libraries provide little evidence for differential ex- pression. In addition, the pronounced discreteness of these counts interferes with some of the statistical approximations that are used later in the pipeline. These genes should be filtered out prior to further analysis. Here, we will retain a gene only if it is expressed at a count-per-million (CPM) above 50 in at least four samples.
+Genes with very low counts across all libraries provide little evidence for differential ex- pression. In addition, the pronounced discreteness of these counts interferes with some of the statistical approximations that are used later in the pipeline. These genes should be filtered out prior to further analysis. Here, we will retain a gene only if it is expressed at a count-per-million (CPM) above 60 in at least four samples.
 
 ```{r filter-lowCounts}
-keep <- rowSums(cpm(y) > 50) >= 4
+keep <- rowSums(cpm(y) > 60) >= 4
 y <- y[keep,]
 summary(keep)
 ```
 
 Where did those cutoff numbers come from?
 
-As a general rule, we don't want to exclude a gene that is expressed in only one group, so a cutoff number equal to the number of replicates can be a good starting point. For counts, a good threshold can be chosen by identifying the CPM that corresponds to a count of 10, which in this case would be about 50 (due to our fastq files being subsets of the full reads):
+As a general rule, we don't want to exclude a gene that is expressed in only one group, so a cutoff number equal to the number of replicates can be a good starting point. For counts, a good threshold can be chosen by identifying the CPM that corresponds to a count of 10, which in this case would be about 60 (due to our fastq files being subsets of the full reads):
 ```{r estimate-cpmCutoff}
 cpm(10, mean(y$samples$lib.size))
 ```
@@ -159,7 +169,7 @@ Smaller CPM thresholds are usually appropriate for larger libraries.
 
 TMM normalization is performed to eliminate composition biases between libraries. This generates a set of normalization factors, where the product of these factors and the library sizes defines the effective library size. The calcNormFactors function returns the DGEList argument with only the norm.factors changed.
 
-```{r}
+```{r calc-normFactors}
 y <- calcNormFactors(y)
 y$samples
 ```
@@ -179,13 +189,12 @@ for (sample in 1:nrow(y$samples)) {
 The data can be explored by generating multi-dimensional scaling (MDS) plots. This visualizes the differences between the expression profiles of different samples in two dimensions. The next plot shows the MDS plot for the yeast heatshock data.
 
 ```{r plot-MDS}
-points <- c(0,1,2,15,16,17)
-colors <- rep(c("blue", "darkgreen", "red"), 2)
+points <- c(1,1,2,2)
+colors <- rep(c("black", "red"),8)
 plotMDS(y, col=colors[group], pch=points[group])
-legend("top", legend=levels(group),
+legend("topright", legend=levels(group),
      pch=points, col=colors, ncol=2)
 ```
-
 
 
 
@@ -212,7 +221,7 @@ or cell lines, though larger values will be observed for patient-derived data (>
 For the QL dispersions, estimation can be performed using the glmQLFit function. This
 returns a DGEGLM object containing the estimated values of the GLM coefficients for each
 gene
-```{r}
+```{r generate-fit}
 fit <- glmQLFit(y, design, robust=TRUE)
 head(fit$coefficients)
 plotQLDisp(fit)
@@ -231,68 +240,59 @@ the QL F-test. The contrast of interest can be specified using the makeContrasts
 Here, genes are detected that are DE between the stressed and unstressed.
 This is done by defining the null hypothesis as heat stressed - unstressed = 0.
 
-```{r}
-con <- makeContrasts(heat - unstressed, levels=design)
-res <- glmQLFTest(fit, #coef="heat")
-                  contrast = con)
+```{r fit-contrast}
+# generate contrasts we are interested in learning about
+my.contrasts <- makeContrasts(EtOHvsMOCK.WT = WT.EtOH - WT.unstressed, 
+                     EtOHvsMOCK.MSN24dd = msn24dd.EtOH - msn24dd.unstressed,
+                     EtOH.MSN24ddvsWT = msn24dd.EtOH - WT.EtOH,
+                     MOCK.MSN24ddvsWT = msn24dd.unstressed - WT.unstressed,
+                     EtOHvsWT.MSN24ddvsWT = (msn24dd.EtOH-msn24dd.unstressed)-(WT.EtOH-WT.unstressed),
+                     levels=design)
+
+# This contrast looks at the difference in the stress responses between mutant and WT
+res <- glmQLFTest(fit, contrast = my.contrasts[,"EtOHvsWT.MSN24ddvsWT"])
 ```
 
-```{r}
+```{r create-Table}
+# let's take a quick look at the results
+topTags(res, n=10) 
+
+# generate a beautiful table for the pdf/html file.
 topTags(res, n=Inf) %>% data.frame() %>% 
-  arrange(desc(logFC)) %>%
+  arrange(FDR) %>%
   mutate(logFC=round(logFC,2)) %>%
   mutate(across(where(is.numeric), signif, 3)) %>%
   reactable()
 ```
 
-```{r}
+```{r summarize-DEgenes}
 is.de <- decideTestsDGE(res, p.value=0.05)
 summary(is.de)
 ```
+
 Let's take a quick look at the differential expression
-```{r}
+```{r visualize-DEgenes}
 plotSmear(res, de.tags=rownames(res)[is.de!=0])
 ```
 
+We need to make sure and save our output file(s).
+```{r save-res}
+# Choose topTags destination
+dir_output_edgeR <-
+  path.expand("~/Desktop/Genomic_Data_Analysis/Analysis/edgeR")
+if (!dir.exists(dir_output_edgeR)) {
+  dir.create(dir_output_edgeR, recursive = TRUE)
+}
 
-# Gene Ontology
-```{r}
-# alias2Symbol()
+# for shairng with others, the topTags output is convenient.
+topTags(res, n = Inf) %>% data.frame() %>%
+  arrange(desc(logFC)) %>%
+  mutate(logFC = round(logFC, 2)) %>%
+  mutate(across(where(is.numeric), signif, 3)) %>%
+  write_tsv(., file = paste0(dir_output_edgeR, "yeast_topTags_edgeR.tsv"))
 
-# go <- goana(res, species.KEGG="sce")
-# topGO(go, n=10)
-
-kegg <- kegga(res, species.KEGG="sce", FDR=0.01,
-      plot=T)
-
-topKEGG(kegg, sort="up")
-
-
-gene_data_logFC <- res$table %>% dplyr::select(logFC)
-
-
-if (!requireNamespace("pathview", quietly = TRUE))
-    BiocManager::install("pathview")
-
-library("pathview")
-test <- pathview(gene.data  = gene_data_logFC,
-                     # pathway.id = "sce01100", #metabolic pathways
-                     pathway.id = "sce00010", #glycolysis/gluconeogenesis
-                     # pathway.id = "sce03050", # proteasome cycle
-                     # pathway.id = "sce00020", # TCA cycle
-                     # pathway.id = "sce00500", # starch & sucrose metabolism (trehalose)
-                     # pathway.id = "sce00030", #PPP
-                     species    = "sce",
-                     gene.idtype="orf",
-                     expand.node = TRUE,
-                     map.symbol = T,
-                     kegg.native = F, 
-                     match.data = T, 
-                     multi.state = T, 
-                     bins=20,
-                     same.layer = F,
-                     pdf.size=c(7,7),
-                     limit = list(gene=5, cpd=1))
+# for subsequent analysis, let's save the res object as an R data object.
+saveRDS(object = res, file = paste0(dir_output_edgeR, "yeast_res_edgeR.Rds"))
 ```
 
 
